--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
-  "name": "teleroompro",
+  "name": "tele-room",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Мессенджер для друзей",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "type": "commonjs",
   "dependencies": {
-    "express": "^5.2.1",
-    "multer": "^2.0.2",
-    "socket.io": "^4.8.3",
-    "sqlite3": "^5.1.7"
+    "express": "^4.18.2",
+    "socket.io": "^4.5.4",
+    "sqlite3": "^5.1.6",
+    "multer": "^1.4.5-lts.1"
   }
 }
