--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
     "socket.io": "^4.5.4",
     "sqlite3": "^5.1.6",
     "multer": "^1.4.5-lts.1"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
