--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.5.4",
+    "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
-    "multer": "^1.4.5-lts.1"
-  },
+    "multer": "^1.4.5-lts.1",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "express-validator": "^7.0.1",
+    "sanitize-filename": "^1.6.3"
+}
   "engines": {
     "node": "18.x"
   }
