--- a/package.json
+++ b/package.json
@@ -1,22 +1,19 @@
 {
-  "name": "tele-room",
+  "name": "teleroom",
   "version": "1.0.0",
-  "description": "Мессенджер для друзей",
+  "description": "TeleRoom - Лучший месенджер",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.6.1",
+    "socket.io": "^4.7.2",
     "sqlite3": "^5.1.6",
     "multer": "^1.4.5-lts.1",
     "helmet": "^7.1.0",
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "sanitize-filename": "^1.6.3"
-  },
-  "engines": {
-    "node": "18.x"
   }
 }
