--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "teleroom",
-  "version": "1.0.0",
-  "description": "TeleRoom - Лучший месенджер",
+  "name": "teleroom-mega-ultra-supreme",
+  "version": "4.0.0",
+  "description": "🚀 Абсолютно защищённый мессенджер с аппаратной привязкой",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "backup": "node backup.js",
+    "clean": "rm -rf logs/* uploads/*/* temp/* backups/*.gz"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -15,5 +18,11 @@
     "express-rate-limit": "^7.1.5",
     "express-validator": "^7.0.1",
     "sanitize-filename": "^1.6.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
